# mchplnet

./: .gitignore  README.md  pyproject.toml  quality.txt  requirements.txt
.github/workflows/: checks.yml  release.yml
doc/: conf.py  index.rst  installation.rst  interfaces.rst  overview.rst  protocol.rst
examples/: get_ram_example.py
mchplnet/: __init__.py  lnet.py  lnetframe.py
mchplnet/examples/: __init__.py  auto_detect_example.py  get_ram_example.py  get_ram_example_auto.py  get_ram_example_tcp.py  simple_auto_detect.py  tcp_server.py
mchplnet/interfaces/: abstract_interface.py  can.py  factory.py  lin.py  tcp_ip.py  uart.py
mchplnet/services/: device_info.py  frame_device_info.py  frame_getram.py  frame_load_parameter.py  frame_putram.py  frame_reboot.py  frame_save_parameter.py  scope.py  trying_scope_config.py
pylnet/: lnet.py  lnetframe.py
pylnet/interfaces/: abstract_interface.py  can.py  factory.py  lin.py  serialsetup.py  tcp_ip.py  uart.py
pylnet/services/: device_info.py  frame_device_info.py  frame_getram.py  frame_putram.py
scripts/: update_version.py
tests/: __init__.py  test_interface.py  test_thread_safety.py
