[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mchplnet"
version = "0.5.1"
description = "Python implementation of Microchip LNet protocol"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "LicenseRef-Proprietary"
authors = [
  {name = "Yash Agarwal"},
  {name = "Edras Pacola", email = "edras.pacola@microchip.com"},
  {name = "Christoph Baumgartner"},
  {name = "Mark Wendler"},
]
dependencies = [
  "pyserial>=3.5,<4.0",
  "python-socketio>=5.16.1,<6.0.0",
  "python-can>=4.6.1,<5.0.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit==4.3.0",
  "pylint==3.1.0",
  "pytest==8.1.1",
  "pytest-mock==3.14.0",
  "ruff==0.4.4",
]
docs = [
  "astroid<4.0.0",
  "furo==2024.1.29",
  "myst-parser==2.0.0",
  "sphinx==7.2.6",
  "sphinx-autoapi==3.0.0",
  "sphinx-rtd-theme==2.0.0",
]
build = [
  "build>=1.2.2",
  "twine>=5.1.1",
]

[project.urls]
Homepage = "https://x2cscope.github.io/"
Documentation = "https://x2cscope.github.io/"
Repository = "https://github.com/X2Cscope/mchplnet"

[tool.setuptools.packages.find]
include = ["mchplnet*"]
exclude = ["tests", "doc"]

[tool.ruff]
line-length = 120
lint.pydocstyle.convention = "google"
lint.select = ["D"]
lint.extend-select = ["I", "N", "F", "PL", "D"]
lint.ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
pythonpath = ["."]
